# PiControlX

./: .gitignore
client/: Cargo.toml  build.rs
client/src/: main.rs
proto/: api.proto
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs  public.rs
server/src/caches/: mod.rs
server/src/caches/disk/: fetcher.rs  fetcher_test.rs  mod.rs
server/src/caches/hello/: mod.rs
server/src/public/: event_queue.rs  shutdown.rs
server/src/server/: converter.rs  event_queue.rs  fetcher.rs  mod.rs  server.rs
