[package]
name = "server"
version = "0.1.0"
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.9.0", features = ["full"] }
tokio-stream = { version =  "0.1.7", features = ["net", "sync"] }
log = "*"
simplelog = { version = "^0.10.0", features = ["test"] }
prost = "0.8"
tonic = "0.5"
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.5"
